--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nativescript-audio",
-  "version": "5.0.1",
+  "name": "cmckni3-nativescript-audio",
+  "version": "8.0.0",
   "description": "NativeScript plugin to record and play audio.",
   "main": "audio",
   "typings": "index.d.ts",
